# loop-cgal

./: CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: cut_example.py  grid_test.py
loop_cgal/: __init__.py  bindings.cpp  utils.py
src/: clip.cpp  edge_table.h  grid.cpp  grid.h  marchingcube.cpp  marchingcubes.h  mesh.cpp  mesh.h  meshutils.cpp  meshutils.h  topologymanager.cpp  topologymanager.h
tests/: test_file_io.py  test_mesh_operations.py
